# bare-metal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bare-metal-asm/: CMakeLists.txt
bare-metal-asm/src/: main.asm
bare-metal-c/: CMakeLists.txt
bare-metal-c/src/: main.c
bare-metal-cpp/: CMakeLists.txt
bare-metal-cpp/src/: main.cpp
bare-metal-init/: CMakeLists.txt
bare-metal-init/include/: custom_intrinsics.h
bare-metal-init/src/: startup.asm
bare-metal-init/src/nrf52833/: vectors.asm
toolchains/cmake/: arm-none-eabi.cmake  embedded-utilities.cmake
toolchains/cmake/nrf52833/: nordic_nrf52_dk.cfg  nrf52833.cmake  nrf52833.ld
